# QHYCCD_Linux

./: .gitignore  85-qhy.rules  CMakeLists.txt
sample/: CMakeLists.txt
